--- a/arch/arm/dts/am572x-ksp-5015.dts
+++ b/arch/arm/dts/am572x-ksp-5015.dts
@@ -9,5 +9,5 @@
 
 #include "am572x-phycore-som.dtsi"		/* Superset - enables all SOM features */
 #include "am572x-ksp-5015.dtsi"			/* Carrier Board */
-#include "am572x-pcm-057-41300111i.dtsi"	/* SOM variant */
+#include "am572x-pcm-057-ksp02.dtsi"		/* SOM variant */
 
