arm: dts: am572x-pcm-057*: include industrial temp information
Signed-off-by: Russell Robinson <rrobinson@phytec.com>

--- a/arch/arm/dts/am572x-pcm-057-40201111i.dtsi
+++ b/arch/arm/dts/am572x-pcm-057-40201111i.dtsi
@@ -9,6 +9,8 @@
  * TI AM5726 Processor
  */
 
+#include "am57xx-industrial-grade.dtsi"
+
 / {
 	model = "PHYTEC phyCORE-AM5726 with 2GiB DDR3, Industrial Temp";
 	compatible = "phytec,am572x-pcm-057-40201111i", "phytec,am572x-phycore-som", "ti,am5728", "ti,dra742", "ti,dra74", "ti,dra7";
