--- a/arch/arm/dts/am572x-pcm-057-41300111i.dtsi
+++ b/arch/arm/dts/am572x-pcm-057-41300111i.dtsi
@@ -9,6 +9,8 @@
  * TI AM5728 Processor
  */
 
+#include "am57xx-industrial-grade.dtsi"
+
 / {
 	model = "PHYTEC phyCORE-AM5728 with 2GiB DDR3, Industrial Temp";
 	compatible = "phytec,am572x-pcm-057-41300111i", "phytec,am572x-phycore-som", "ti,am5728", "ti,dra742", "ti,dra74", "ti,dra7";
