--- a/arch/arm/mach-omap2/omap5/Kconfig
+++ b/arch/arm/mach-omap2/omap5/Kconfig
@@ -66,7 +66,7 @@ endchoice
 config SYS_SOC
 	default "omap5"
 
-if TARGET_DRA7XX_EVM || TARGET_AM57XX_EVM
+if TARGET_DRA7XX_EVM || TARGET_AM57XX_EVM || TARGET_AM572X_PHYCORE_RDK
 menu "Voltage Domain OPP selections"
 
 choice
