--- a/board/phytec/common/Kconfig
+++ b/board/phytec/common/Kconfig
@@ -1,3 +1,40 @@
 config PHYTEC_EEPROM
 	bool "Support for EEPROM-based board detection for PHYTEC platforms"
 	default y
+
+if ARCH_OMAP2
+
+config SPL_ENV_SUPPORT
+	default y
+
+config SPL_EXT_SUPPORT
+	default y
+
+config SPL_FAT_SUPPORT
+	default y
+
+config SPL_GPIO_SUPPORT
+	default y
+
+config SPL_I2C_SUPPORT
+	default y
+
+config SPL_LIBCOMMON_SUPPORT
+	default y
+
+config SPL_LIBDISK_SUPPORT
+	default y
+
+config SPL_LIBGENERIC_SUPPORT
+	default y
+
+config SPL_MMC_SUPPORT
+	default y
+
+config SPL_POWER_SUPPORT
+	default y
+
+config SPL_SERIAL_SUPPORT
+	default y
+
+endif
