--- a/arch/arm/dts/am572x-phycore-som.dtsi
+++ b/arch/arm/dts/am572x-phycore-som.dtsi
@@ -226,51 +226,51 @@
 
 &dra7_iodelay_core {
 	mmc2_iodelay_ddr_3_3v_conf: mmc2_iodelay_ddr_3_3v_conf {
-		pinctrl-single,pins = <
-			0x18c (A_DELAY_PS(0) | G_DELAY_PS(120))   /* CFG_GPMC_A19_IN */
-			0x190 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A19_OEN */
-			0x194 (A_DELAY_PS(174) | G_DELAY_PS(0))   /* CFG_GPMC_A19_OUT */
-			0x1a4 (A_DELAY_PS(265) | G_DELAY_PS(360)) /* CFG_GPMC_A20_IN */
-			0x1a8 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A20_OEN */
-			0x1ac (A_DELAY_PS(168) | G_DELAY_PS(0))   /* CFG_GPMC_A20_OUT */
-			0x1b0 (A_DELAY_PS(0) | G_DELAY_PS(120))   /* CFG_GPMC_A21_IN */
-			0x1b4 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A21_OEN */
-			0x1b8 (A_DELAY_PS(136) | G_DELAY_PS(0))   /* CFG_GPMC_A21_OUT */
-			0x1bc (A_DELAY_PS(0) | G_DELAY_PS(120))   /* CFG_GPMC_A22_IN */
-			0x1c0 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A22_OEN */
-			0x1c4 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A22_OUT */
-			0x1c8 (A_DELAY_PS(287) | G_DELAY_PS(420)) /* CFG_GPMC_A23_IN */
-			0x1d0 (A_DELAY_PS(879) | G_DELAY_PS(0))   /* CFG_GPMC_A23_OUT */
-			0x1d4 (A_DELAY_PS(144) | G_DELAY_PS(240)) /* CFG_GPMC_A24_IN */
-			0x1d8 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A24_OEN */
-			0x1dc (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A24_OUT */
-			0x1e0 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A25_IN */
-			0x1e4 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A25_OEN */
-			0x1e8 (A_DELAY_PS(34) | G_DELAY_PS(0))    /* CFG_GPMC_A25_OUT */
-			0x1ec (A_DELAY_PS(0) | G_DELAY_PS(120))   /* CFG_GPMC_A26_IN */
-			0x1f0 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A26_OEN */
-			0x1f4 (A_DELAY_PS(120) | G_DELAY_PS(0))   /* CFG_GPMC_A26_OUT */
-			0x1f8 (A_DELAY_PS(120) | G_DELAY_PS(180)) /* CFG_GPMC_A27_IN */
-			0x1fc (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A27_OEN */
-			0x200 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_A27_OUT */
-			0x360 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_CS1_IN */
-			0x364 (A_DELAY_PS(0) | G_DELAY_PS(0))     /* CFG_GPMC_CS1_OEN */
-			0x368 (A_DELAY_PS(11) | G_DELAY_PS(0))    /* CFG_GPMC_CS1_OUT */
+		pinctrl-pin-array = <
+			0x18c A_DELAY_PS(0) G_DELAY_PS(120)   /* CFG_GPMC_A19_IN */
+			0x190 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A19_OEN */
+			0x194 A_DELAY_PS(174) G_DELAY_PS(0)   /* CFG_GPMC_A19_OUT */
+			0x1a4 A_DELAY_PS(265) G_DELAY_PS(360) /* CFG_GPMC_A20_IN */
+			0x1a8 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A20_OEN */
+			0x1ac A_DELAY_PS(168) G_DELAY_PS(0)   /* CFG_GPMC_A20_OUT */
+			0x1b0 A_DELAY_PS(0) G_DELAY_PS(120)   /* CFG_GPMC_A21_IN */
+			0x1b4 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A21_OEN */
+			0x1b8 A_DELAY_PS(136) G_DELAY_PS(0)   /* CFG_GPMC_A21_OUT */
+			0x1bc A_DELAY_PS(0) G_DELAY_PS(120)   /* CFG_GPMC_A22_IN */
+			0x1c0 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A22_OEN */
+			0x1c4 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A22_OUT */
+			0x1c8 A_DELAY_PS(287) G_DELAY_PS(420) /* CFG_GPMC_A23_IN */
+			0x1d0 A_DELAY_PS(879) G_DELAY_PS(0)   /* CFG_GPMC_A23_OUT */
+			0x1d4 A_DELAY_PS(144) G_DELAY_PS(240) /* CFG_GPMC_A24_IN */
+			0x1d8 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A24_OEN */
+			0x1dc A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A24_OUT */
+			0x1e0 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A25_IN */
+			0x1e4 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A25_OEN */
+			0x1e8 A_DELAY_PS(34) G_DELAY_PS(0)    /* CFG_GPMC_A25_OUT */
+			0x1ec A_DELAY_PS(0) G_DELAY_PS(120)   /* CFG_GPMC_A26_IN */
+			0x1f0 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A26_OEN */
+			0x1f4 A_DELAY_PS(120) G_DELAY_PS(0)   /* CFG_GPMC_A26_OUT */
+			0x1f8 A_DELAY_PS(120) G_DELAY_PS(180) /* CFG_GPMC_A27_IN */
+			0x1fc A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A27_OEN */
+			0x200 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_A27_OUT */
+			0x360 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_CS1_IN */
+			0x364 A_DELAY_PS(0) G_DELAY_PS(0)     /* CFG_GPMC_CS1_OEN */
+			0x368 A_DELAY_PS(11) G_DELAY_PS(0)    /* CFG_GPMC_CS1_OUT */
 		>;
 	};
 
 	qspi1_iodelay_conf: qspi1_iodelay_conf {
-		pinctrl-single,pins = <
-			0x144 (A_DELAY_PS(0) | G_DELAY_PS(0))       /* CFG_GPMC_A13_IN */
-			0x150 (A_DELAY_PS(2575) | G_DELAY_PS(966))  /* CFG_GPMC_A14_IN */
-			0x15c (A_DELAY_PS(2503) | G_DELAY_PS(889))  /* CFG_GPMC_A15_IN */
-			0x168 (A_DELAY_PS(2528) | G_DELAY_PS(1007)) /* CFG_GPMC_A16_IN */
-			0x170 (A_DELAY_PS(0) | G_DELAY_PS(0))       /* CFG_GPMC_A16_OUT */
-			0x174 (A_DELAY_PS(2533) | G_DELAY_PS(980))  /* CFG_GPMC_A17_IN */
-			0x188 (A_DELAY_PS(590) | G_DELAY_PS(0))     /* CFG_GPMC_A18_OUT */
-			0x218 (A_DELAY_PS(114) | G_DELAY_PS(0))     /* CFG_GPMC_A3_OUT */
-			0x374 (A_DELAY_PS(0) | G_DELAY_PS(0))       /* CFG_GPMC_CS2_OUT */
-			0x380 (A_DELAY_PS(70) | G_DELAY_PS(0))      /* CFG_GPMC_CS3_OUT */
+		pinctrl-pin-array = <
+			0x144 A_DELAY_PS(0) G_DELAY_PS(0)       /* CFG_GPMC_A13_IN */
+			0x150 A_DELAY_PS(2575) G_DELAY_PS(966)  /* CFG_GPMC_A14_IN */
+			0x15c A_DELAY_PS(2503) G_DELAY_PS(889)  /* CFG_GPMC_A15_IN */
+			0x168 A_DELAY_PS(2528) G_DELAY_PS(1007) /* CFG_GPMC_A16_IN */
+			0x170 A_DELAY_PS(0) G_DELAY_PS(0)       /* CFG_GPMC_A16_OUT */
+			0x174 A_DELAY_PS(2533) G_DELAY_PS(980)  /* CFG_GPMC_A17_IN */
+			0x188 A_DELAY_PS(590) G_DELAY_PS(0)     /* CFG_GPMC_A18_OUT */
+			0x218 A_DELAY_PS(114) G_DELAY_PS(0)     /* CFG_GPMC_A3_OUT */
+			0x374 A_DELAY_PS(0) G_DELAY_PS(0)       /* CFG_GPMC_CS2_OUT */
+			0x380 A_DELAY_PS(70) G_DELAY_PS(0)      /* CFG_GPMC_CS3_OUT */
 		>;
 	};
 
@@ -502,6 +502,7 @@
 	ti,non-removable;
 	cap-mmc-dual-data-rate;
 	max-frequency = <96000000>;
+	no-1-8-v;
 	/delete-property/ mmc-hs200-1_8v;
 };
 
