AM57TLY-383 am572x_phycore_rdk: add support for PCM-057-10200110I configuration
Signed-off-by: Russell Robinson <rrobinson@phytec.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -153,7 +153,8 @@ dtb-$(CONFIG_TARGET_AM572X_PHYCORE_RDK) += am572x-phycore-rdk.dtb \
 	am572x-phycore-rdk-41201111i.dtb \
 	am572x-phycore-rdk-40201111i.dtb \
 	am572x-phycore-rdk-50201111i.dtb \
-	am572x-phycore-rdk-50500111i.dtb
+	am572x-phycore-rdk-50500111i.dtb \
+	am572x-phycore-rdk-10200110i.dtb
 
 dtb-$(CONFIG_TARGET_STV0991) += stv0991.dtb
 
