am572x_phycore_rdk: add support for NAND boot
Internal reference: AM57TLY-404 AM57TLY-405 AM57TLY-406

Signed-off-by: Matt McKee <mmckee@phytec.com>

--- a/board/phytec/common/Kconfig
+++ b/board/phytec/common/Kconfig
@@ -2,6 +2,10 @@ config PHYTEC_EEPROM
 	bool "Support for EEPROM-based board detection for PHYTEC platforms"
 	default y
 
+config NAND
+	bool "Support for NAND on PHYTEC platforms"
+	default n
+
 if ARCH_OMAP2
 
 config SPL_ENV_SUPPORT
