--- a/board/phytec/am572x_phycore_rdk/Kconfig
+++ b/board/phytec/am572x_phycore_rdk/Kconfig
@@ -29,6 +29,8 @@ choice
 		bool "1GiB (2x 256M16)"
 	config PCM_057_256M16_x4_DDR
 		bool "2GiB (4x 256M16)"
+	config PCM_057_512M16_x2_DDR
+		bool "2GiB (2x 512M16)"
 	config PCM_057_512M16_x4_DDR
 		bool "4GiB (4x 512M16)"
 endchoice
