Revert: "board: phytec: am572x_phycore_rdk: update am57xx_phycore_rdk naming scheme"
Revert the following commit, with additional changes for
modifications since the original patch was created.

commit 41a7d4147906c4002201c6f5a6fd80062c30ec05
Author: Russell Robinson <rrobinson@phytec.com>
Date:   Thu Jul 6 14:27:29 2017 -0700

    board: phytec: am572x_phycore_rdk: update am57xx_phycore_rdk naming scheme

Now that we have support for EEPROM detection and have
a reasonable way to support other AM57xx silicon options
within one board file, rename am572x support to am57xx
where appropriate to actually represent that it contains
more than just am572x code.

Signed-off-by: Russell Robinson <rrobinson@phytec.com>

--- a/board/phytec/am57xx_phycore_rdk/Kconfig
+++ b/board/phytec/am57xx_phycore_rdk/Kconfig
@@ -1,13 +1,13 @@
-if TARGET_AM572X_PHYCORE_RDK
+if TARGET_AM57XX_PHYCORE_RDK
 
 config SYS_BOARD
-	default "am572x_phycore_rdk"
+	default "am57xx_phycore_rdk"
 
 config SYS_VENDOR
 	default "phytec"
 
 config SYS_CONFIG_NAME
-	default "am572x_phycore_rdk"
+	default "am57xx_phycore_rdk"
 
 config CONS_INDEX
 	int "UART used for console"
@@ -22,7 +22,7 @@ choice
 	prompt "Select DDR3L Total Memory Size"
 	default PCM_057_256M16_x4_DDR
 	help
-	  The phyCORE-AM572x SOM (PCM-057) can be populated with different DDR3
+	  The phyCORE-AM57xx SOM (PCM-057) can be populated with different DDR3
 	  chips resulting in various configurations and total available memory.
 
 	config PCM_057_256M16_x2_DDR
