--- a/arch/arm/mach-omap2/omap5/Kconfig
+++ b/arch/arm/mach-omap2/omap5/Kconfig
@@ -58,15 +58,15 @@ config TARGET_AM57XX_EVM
 	bool "AM57XX"
 	select TI_I2C_BOARD_DETECT
 
-config TARGET_AM572X_PHYCORE_RDK
-	bool "PHYTEC phyCORE-AM572x RDK"
+config TARGET_AM57XX_PHYCORE_RDK
+	bool "PHYTEC phyCORE-AM57xx RDK"
 
 endchoice
 
 config SYS_SOC
 	default "omap5"
 
-if TARGET_DRA7XX_EVM || TARGET_AM57XX_EVM || TARGET_AM572X_PHYCORE_RDK
+if TARGET_DRA7XX_EVM || TARGET_AM57XX_EVM || TARGET_AM57XX_PHYCORE_RDK
 menu "Voltage Domain OPP selections"
 
 choice
@@ -161,7 +161,7 @@ endif
 
 source "board/compulab/cl-som-am57x/Kconfig"
 source "board/compulab/cm_t54/Kconfig"
-source "board/phytec/am572x_phycore_rdk/Kconfig"
+source "board/phytec/am57xx_phycore_rdk/Kconfig"
 source "board/ti/omap5_uevm/Kconfig"
 source "board/ti/dra7xx/Kconfig"
 source "board/ti/am57xx/Kconfig"
