--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -158,7 +158,8 @@ dtb-$(CONFIG_TARGET_AM57XX_PHYCORE_RDK) += am572x-phycore-rdk.dtb \
 	am572x-phycore-rdk-40200110c.dtb \
 	am572x-phycore-rdk-40a00111i.dtb \
 	am571x-phycore-rdk-10302111i.dtb \
-	am571x-phycore-rdk-30302111i.dtb
+	am571x-phycore-rdk-30302111i.dtb \
+	am571x-phycore-rdk-10203110c.dtb
 
 dtb-$(CONFIG_TARGET_STV0991) += stv0991.dtb
 
