configs: am57xx_phycore_rdk: update to am57xx naming and default to minimal board conf
In addition to transitioning from am572x_phycore_rdk
to am57xx_phycore_rdk, use minimal AM5716 configuration
with 1GiB DDR3 (1 bank) population for fallback. This
allows one image to be used for all bring-up before the
EEPROM is populated with identifier information,
regardless of silicon population options.

Signed-off-by: Russell Robinson <rrobinson@phytec.com>

--- a/configs/am57xx_phycore_rdk_defconfig
+++ b/configs/am57xx_phycore_rdk_defconfig
@@ -3,12 +3,12 @@ CONFIG_OMAP54XX=y
 CONFIG_SYS_MALLOC_F_LEN=0x2000
 # CONFIG_SPL_NAND_SUPPORT is not set
 CONFIG_TARGET_AM57XX_PHYCORE_RDK=y
-CONFIG_PCM_057_256M16_x4_DDR=y
+CONFIG_PCM_057_256M16_x2_DDR=y
 CONFIG_SPL_SPI_FLASH_SUPPORT=y
 CONFIG_SPL_SPI_SUPPORT=y
 CONFIG_ARMV7_LPAE=y
 CONFIG_SPL_STACK_R_ADDR=0x82000000
-CONFIG_DEFAULT_DEVICE_TREE="am572x-phycore-rdk"
+CONFIG_DEFAULT_DEVICE_TREE="am57xx-phycore-rdk"
 CONFIG_FIT=y
 CONFIG_OF_BOARD_SETUP=y
 CONFIG_DRA7_DSPEVE_OPP_HIGH=y
@@ -58,7 +58,7 @@ CONFIG_OF_CONTROL=y
 CONFIG_SPL_OF_CONTROL=y
 CONFIG_SPL_OF_TRANSLATE=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
-CONFIG_OF_LIST="am572x-phycore-rdk am572x-phycore-rdk-40a00111i am572x-phycore-rdk-41300111i am572x-phycore-rdk-40201111i am572x-phycore-rdk-41201111i am572x-phycore-rdk-50201111i am572x-phycore-rdk-50500111i am572x-phycore-rdk-10200110i am572x-phycore-rdk-40200110c"
+CONFIG_OF_LIST="am57xx-phycore-rdk am572x-phycore-rdk-40a00111i am572x-phycore-rdk-41300111i am572x-phycore-rdk-40201111i am572x-phycore-rdk-41201111i am572x-phycore-rdk-50201111i am572x-phycore-rdk-50500111i am572x-phycore-rdk-10200110i am572x-phycore-rdk-40200110c am571x-phycore-rdk-10302111i am571x-phycore-rdk-30302111i am571x-phycore-rdk-10203110c"
 CONFIG_DM=y
 CONFIG_SPL_DM=y
 CONFIG_REGMAP=y
