configs: am571x_phycore_rdk_256M16_x2: add am571x-phycore-rdk-10203110c to OF_LIST
Signed-off-by: Russell Robinson <rrobinson@phytec.com>

--- a/configs/am571x_phycore_rdk_256M16_x2_defconfig
+++ b/configs/am571x_phycore_rdk_256M16_x2_defconfig
@@ -58,7 +58,7 @@ CONFIG_OF_CONTROL=y
 CONFIG_SPL_OF_CONTROL=y
 CONFIG_SPL_OF_TRANSLATE=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
-CONFIG_OF_LIST="am571x-phycore-rdk-10302111i am571x-phycore-rdk-30302111i"
+CONFIG_OF_LIST="am571x-phycore-rdk-10302111i am571x-phycore-rdk-30302111i am571x-phycore-rdk-10203110c"
 CONFIG_DM=y
 CONFIG_SPL_DM=y
 CONFIG_REGMAP=y
