--- a/arch/arm/dts/am57xx-phycore-common.dtsi
+++ b/arch/arm/dts/am57xx-phycore-common.dtsi
@@ -235,6 +235,7 @@
 			0xCC (PIN_OUTPUT | SLEWCONTROL | MUX_MODE0)		/* gpmc_wen */
 			0xD0 (PIN_OUTPUT | SLEWCONTROL | MUX_MODE0)		/* gpmc_ben0 */
 			0xD8 (PIN_INPUT | MUX_MODE0)				/* gpmc_wait0 */
+			0x16C (PIN_INPUT_PULLUP | MUX_MODE15)			/* vin2a_d1.off */
 		>;
 	};
 };
@@ -647,25 +648,27 @@
 		interrupts = <0 IRQ_TYPE_NONE>,		/* fifoevent */
 			<1 IRQ_TYPE_NONE>;		/* termcount */
 		rb-gpios = <&gpmc 0 GPIO_ACTIVE_HIGH>;	/* gpmc_wait0 pin */
-		/* Settings for Winbond W29N08GV 1GB NAND */
-		ti,nand-ecc-opt = "bch8";
+
+		/* Settings for Micron MT29F8G08ABACAWP 1GB NAND */
+		ti,nand-ecc-opt = "bch16";
 		ti,elm-id = <&elm>;
 		nand-bus-width = <8>;
 		gpmc,device-width = <1>;
 		gpmc,sync-clk-ps = <0>;
 		gpmc,cs-on-ns = <0>;
-		gpmc,cs-rd-off-ns = <40>;
-		gpmc,cs-wr-off-ns = <90>;
+		gpmc,cs-rd-off-ns = <35>;
+		gpmc,cs-wr-off-ns = <25>;
 		gpmc,adv-on-ns = <0>;
-		gpmc,adv-rd-off-ns = <40>;
-		gpmc,adv-wr-off-ns = <90>;
+		gpmc,adv-rd-off-ns = <35>;
+		gpmc,adv-wr-off-ns = <25>;
 		gpmc,we-on-ns = <0>;
-		gpmc,we-off-ns = <20>;
-		gpmc,oe-on-ns = <5>;
-		gpmc,oe-off-ns = <25>;
-		gpmc,access-ns = <30>;
-		gpmc,rd-cycle-ns = <40>;
-		gpmc,wr-cycle-ns = <90>;
+		gpmc,we-off-ns = <15>;
+		gpmc,oe-on-ns = <15>;
+		gpmc,oe-off-ns = <30>;
+		gpmc,access-ns = <35>;
+		gpmc,wr-access-ns = <25>;
+		gpmc,rd-cycle-ns = <35>;
+		gpmc,wr-cycle-ns = <25>;
 		gpmc,bus-turnaround-ns = <0>;
 		gpmc,cycle2cycle-delay-ns = <0>;
 		gpmc,clk-activation-ns = <0>;
@@ -676,31 +679,31 @@
 		#size-cells = <1>;
 		partition@0 {
 			label = "NAND.SPL";
-			reg = <0x00000000 0x00020000>;
+			reg = <0x00000000 0x00040000>;
 		};
 		partition@1 {
 			label = "NAND.SPL.backup1";
-			reg = <0x00020000 0x00020000>;
+			reg = <0x00040000 0x00040000>;
 		};
 		partition@2 {
 			label = "NAND.SPL.backup2";
-			reg = <0x00040000 0x00020000>;
+			reg = <0x00080000 0x00040000>;
 		};
 		partition@3 {
 			label = "NAND.SPL.backup3";
-			reg = <0x00060000 0x00020000>;
+			reg = <0x000C0000 0x00040000>;
 		};
 		partition@4 {
 			label = "NAND.u-boot";
-			reg = <0x00080000 0x00200000>;
+			reg = <0x00100000 0x00200000>;
 		};
 		partition@5 {
 			label = "NAND.u-boot-env";
-			reg = <0x00280000 0x00020000>;
+			reg = <0x00300000 0x00040000>;
 		};
 		partition@6 {
 			label = "NAND.file-system";
-			reg = <0x002A0000 0>;
+			reg = <0x00340000 0>;
 		};
 	};
 };
