--- a/configs/am572x_phycore_rdk_nand_defconfig
+++ b/configs/am572x_phycore_rdk_nand_defconfig
@@ -56,7 +56,7 @@ CONFIG_OF_CONTROL=y
 CONFIG_SPL_OF_CONTROL=y
 CONFIG_SPL_OF_TRANSLATE=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
-CONFIG_OF_LIST="am57xx-phycore-rdk am572x-phycore-rdk-40a00111i am572x-phycore-rdk-41300111i am572x-phycore-rdk-40201111i am572x-phycore-rdk-41201111i am572x-phycore-rdk-50201111i am572x-phycore-rdk-50500111i am572x-phycore-rdk-10200110i am572x-phycore-rdk-40200110c"
+CONFIG_OF_LIST="am57xx-phycore-rdk am572x-phycore-rdk-40a00111i am572x-phycore-rdk-41300111i am572x-phycore-rdk-40201111i am572x-phycore-rdk-41201111i am572x-phycore-rdk-50201111i am572x-phycore-rdk-50500111i am572x-phycore-rdk-10200110i am572x-phycore-rdk-40200110c am572x-phycore-rdk-10201111i"
 CONFIG_DM=y
 CONFIG_SPL_DM=y
 CONFIG_REGMAP=y
