phytec: am571x: remove support for PCM-057-****2**** configurations
AM5718 is incompatible with the design of the PCM-057
therefore support for it should be removed completely
with the am571x support remaining for AM5716 configurations.

Effectively reverts the following commit, but retains the
creation of am571x-phycore-som.dtsi and am571x-pcm-948.dtsi

	43d54dd AM57SW-418 arm: dts: am571x-*: add support
		for PCM-057-30302111I and PCM-057-10302111I configurations

Signed-off-by: Russell Robinson <rrobinson@phytec.com>

--- a/configs/am571x_phycore_rdk_256M16_x2_defconfig
+++ b/configs/am571x_phycore_rdk_256M16_x2_defconfig
@@ -8,7 +8,7 @@ CONFIG_SPL_SPI_FLASH_SUPPORT=y
 CONFIG_SPL_SPI_SUPPORT=y
 CONFIG_ARMV7_LPAE=y
 CONFIG_SPL_STACK_R_ADDR=0x82000000
-CONFIG_DEFAULT_DEVICE_TREE="am571x-phycore-rdk-10302111i"
+CONFIG_DEFAULT_DEVICE_TREE="am571x-phycore-rdk-10203110c"
 CONFIG_FIT=y
 CONFIG_OF_BOARD_SETUP=y
 CONFIG_DRA7_DSPEVE_OPP_HIGH=y
@@ -58,7 +58,7 @@ CONFIG_OF_CONTROL=y
 CONFIG_SPL_OF_CONTROL=y
 CONFIG_SPL_OF_TRANSLATE=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
-CONFIG_OF_LIST="am571x-phycore-rdk-10302111i am571x-phycore-rdk-30302111i am571x-phycore-rdk-10203110c"
+CONFIG_OF_LIST="am571x-phycore-rdk-10203110c"
 CONFIG_DM=y
 CONFIG_SPL_DM=y
 CONFIG_REGMAP=y
