--- a/configs/am57xx_phycore_rdk_defconfig
+++ b/configs/am57xx_phycore_rdk_defconfig
@@ -58,7 +58,7 @@ CONFIG_OF_CONTROL=y
 CONFIG_SPL_OF_CONTROL=y
 CONFIG_SPL_OF_TRANSLATE=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
-CONFIG_OF_LIST="am57xx-phycore-rdk am572x-phycore-rdk-40a00111i am572x-phycore-rdk-41300111i am572x-phycore-rdk-40201111i am572x-phycore-rdk-41201111i am572x-phycore-rdk-50201111i am572x-phycore-rdk-50500111i am572x-phycore-rdk-10200110i am572x-phycore-rdk-40200110c am571x-phycore-rdk-10203110c"
+CONFIG_OF_LIST="am57xx-phycore-rdk am572x-phycore-rdk-40a00111i am572x-phycore-rdk-41300111i am572x-phycore-rdk-40201111i am572x-phycore-rdk-41201111i am572x-phycore-rdk-50201111i am572x-phycore-rdk-50500111i am572x-phycore-rdk-10200110i am572x-phycore-rdk-40200110c am571x-phycore-rdk-10203110c am571x-phycore-rdk-10203111i"
 CONFIG_DM=y
 CONFIG_SPL_DM=y
 CONFIG_REGMAP=y
