--- a/arch/arm/mach-k3/Kconfig
+++ b/arch/arm/mach-k3/Kconfig
@@ -135,4 +135,6 @@ config K3_SPL_ATF
 	  after SPL from R5.
 
 source "board/ti/am65x/Kconfig"
+source "board/phytec/am65xx_phycore_kit/Kconfig"
+
 endif
