--- a/board/phytec/am65xx_phycore_kit/Kconfig
+++ b/board/phytec/am65xx_phycore_kit/Kconfig
@@ -1,43 +1,40 @@
 #
-# Copyright (C) 2017-2018 Texas Instruments Incorporated - http://www.ti.com/
-#	Lokesh Vutla <lokeshvutla@ti.com>
+# Copyright (C) 2018 PHYTEC America, LLC
 #
 # SPDX-License-Identifier:     GPL-2.0+
 #
 
 choice
-	prompt "K3 AM65 based boards"
+	prompt "PHYTEC phyCORE-AM65x based boards"
 	optional
 
-config TARGET_AM654_R5_EVM
-	bool "TI K3 based AM654 EVM running on R5"
+config TARGET_AM65XX_PHYCORE_KIT_R5
+	bool "PHYTEC phyCORE-AM65x Kit (R5 processor)"
 	select CPU_V7R
 	select SYS_THUMB_BUILD
 	select SOC_K3_AM6
 	select K3_LOAD_SYSFW
 	select K3_AM654_DDRSS
-	select TI_I2C_BOARD_DETECT
 	imply K3_SPL_ATF
 
-config TARGET_AM654_A53_EVM
-	bool "TI K3 based AM654 EVM running on A53"
+config TARGET_AM65XX_PHYCORE_KIT_A53
+	bool "PHYTEC phyCORE-AM65x Kit (A53 processor)"
 	select ARM64
 	select SOC_K3_AM6
-	select TI_I2C_BOARD_DETECT
 	select BOARD_LATE_INIT
 
 endchoice
 
-if TARGET_AM654_R5_EVM
+if TARGET_AM65XX_PHYCORE_KIT_R5
 
 config SYS_BOARD
-       default "am65x"
+	default "am65xx_phycore_kit"
 
 config SYS_VENDOR
-       default "ti"
+	default "phytec"
 
 config SYS_CONFIG_NAME
-       default "am65x_evm"
+	default "am65xx_phycore_kit"
 
 config SPL_LDSCRIPT
 	default "arch/arm/mach-omap2/u-boot-spl.lds"
@@ -46,16 +43,16 @@ source "board/ti/common/Kconfig"
 
 endif
 
-if TARGET_AM654_A53_EVM
+if TARGET_AM65XX_PHYCORE_KIT_A53
 
 config SYS_BOARD
-       default "am65x"
+	default "am65xx_phycore_kit"
 
 config SYS_VENDOR
-       default "ti"
+	default "phytec"
 
 config SYS_CONFIG_NAME
-       default "am65x_evm"
+	default "am65xx_phycore_kit"
 
 source "board/ti/common/Kconfig"
 
