--- a/board/phytec/am65xx_phycore_kit/Makefile
+++ b/board/phytec/am65xx_phycore_kit/Makefile
@@ -1,8 +1,7 @@
 #
-# Copyright (C) 2017-2018 Texas Instruments Incorporated - http://www.ti.com/
-#	Lokesh Vutla <lokeshvutla@ti.com>
+# Copyright (C) 2018 PHYTEC America, LLC
 #
 # SPDX-License-Identifier:     GPL-2.0+
 #
 
-obj-y	+= evm.o
+obj-y	+= board.o
