--- a/configs/am65xx_phycore_kit_r5_defconfig
+++ b/configs/am65xx_phycore_kit_r5_defconfig
@@ -6,7 +6,7 @@ CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_SYS_MALLOC_F_LEN=0x55000
 CONFIG_SOC_K3_AM6=y
 CONFIG_K3_EARLY_CONS=y
-CONFIG_TARGET_AM654_R5_EVM=y
+CONFIG_TARGET_AM65XX_PHYCORE_KIT_R5=y
 CONFIG_SPL_MMC_SUPPORT=y
 CONFIG_SPL_SERIAL_SUPPORT=y
 CONFIG_SPL_DRIVERS_MISC_SUPPORT=y
@@ -16,7 +16,7 @@ CONFIG_SPL_SPI_SUPPORT=y
 CONFIG_SPL_STACK_R_ADDR=0x82000000
 CONFIG_SPL_FAT_SUPPORT=y
 CONFIG_ARASAN_SDHCI_MAX_FREQ=25000000
-CONFIG_DEFAULT_DEVICE_TREE="k3-am654-r5-base-board"
+CONFIG_DEFAULT_DEVICE_TREE="k3-am65xx-phycore-kit-r5"
 # CONFIG_SYS_MALLOC_CLEAR_ON_INIT is not set
 CONFIG_SPL_LOAD_FIT=y
 CONFIG_USE_BOOTCOMMAND=y
