AM65SW-48 arm: dts: k3-am65xx-pcm-941: enable MMC1 support
Signed-off-by: Matt McKee <mmckee@phytec.com>

--- a/arch/arm/dts/k3-am65xx-pcm-941-r5.dtsi
+++ b/arch/arm/dts/k3-am65xx-pcm-941-r5.dtsi
@@ -8,3 +8,8 @@
 / {
 };
 
+&sdhci1 {
+	clock-names = "clk_xin", "clk_ahb";
+	clocks = <&clk_200mhz>, <&clk_200mhz>;
+	/delete-property/ power-domains;
+};
