--- a/arch/arm/dts/k3-am65xx-phycore-kit-u-boot.dtsi
+++ b/arch/arm/dts/k3-am65xx-phycore-kit-u-boot.dtsi
@@ -59,3 +59,19 @@
 &wkup_gpio0 {
 	u-boot,dm-spl;
 };
+
+&main_mmc1_pins_default {
+	u-boot,dm-spl;
+};
+
+&mmc1 {
+	u-boot,dm-spl;
+};
+
+&mmc_phy1 {
+	u-boot,dm-spl;
+};
+
+&sdhci1 {
+	u-boot,dm-spl;
+};
