--- a/arch/arm/dts/k3-am65xx-pcm-941.dtsi
+++ b/arch/arm/dts/k3-am65xx-pcm-941.dtsi
@@ -6,6 +6,12 @@
 / {
 	model = "PHYTEC phyCORE-AM65x Carrier Board";
 	compatible = "phytec,am65xx-pcm-941", "phytec,am65xx-phycore-som", "ti,am654";
+
+	chosen {
+		/* UART1 as default stdout path */
+		stdout-path = &main_uart1;
+		bootargs = "earlycon=ns16550a,mmio32,0x02810000";
+	};
 };
 
 &main_pmx0 {
@@ -18,6 +24,15 @@
 			AM65X_IOPAD(0x02d4, PIN_INPUT_PULLDOWN | MUX_MODE0)	/* (C27) MMC1_CLK */
 			AM65X_IOPAD(0x02d8, PIN_INPUT_PULLUP | MUX_MODE0)	/* (C28) MMC1_CMD */
 			AM65X_IOPAD(0x02dc, PIN_INPUT_PULLUP | MUX_MODE0)	/* (B24) MMC1_SDCD */
+		>;
+	};
+
+	main_uart1_pins_default: main_uart1_pins_default {
+		pinctrl-single,pins = <
+			AM65X_IOPAD(0x014c, PIN_OUTPUT | MUX_MODE6)	/* (AD23) PRG1_PRU1GPO6.UART1_TXD */
+			AM65X_IOPAD(0x0174, PIN_INPUT | MUX_MODE6)	/* (AE23) PRG1_PRU1GPO17.UART1_RXD */
+			AM65X_IOPAD(0x0178, PIN_INPUT | MUX_MODE6)	/* (AD22) PRG1_PRU1GPO18.UART1_CTS */
+			AM65X_IOPAD(0x017c, PIN_OUTPUT | MUX_MODE6)	/* (AC21) PRG1_PRU1GPO19.UART1_RTS */
 		>;
 	};
 };
@@ -35,4 +50,10 @@
 	sdhci-caps-mask = <0x80000007 0x0>;
 	mmc-hs200-1_8v;
 	mmc-ddr-1_8v;
+};
+
+&main_uart1 {
+	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&main_uart1_pins_default>;
 };
