--- a/arch/arm/dts/k3-am65xx-phycore-kit-u-boot.dtsi
+++ b/arch/arm/dts/k3-am65xx-phycore-kit-u-boot.dtsi
@@ -60,6 +60,22 @@
 	u-boot,dm-spl;
 };
 
+&main_mmc0_pins_default {
+	u-boot,dm-spl;
+};
+
+&mmc0 {
+	u-boot,dm-spl;
+};
+
+&mmc_phy0 {
+	u-boot,dm-spl;
+};
+
+&sdhci0 {
+	u-boot,dm-spl;
+};
+
 &main_mmc1_pins_default {
 	u-boot,dm-spl;
 };
