IMX7SW-392 ARM: dts: add support for PHYTEC i.MX7D PCM-061-1110110C and update defconfig
Signed-off-by: Anna Horstmann <ahorstmann@phytec.com>

--- a/configs/mx7d_pcm061_11x_defconfig
+++ b/configs/mx7d_pcm061_11x_defconfig
@@ -4,7 +4,7 @@ CONFIG_TARGET_MX7D_PHYBOARD_ZETA=y
 CONFIG_ARMV7_BOOT_SEC_DEFAULT=y
 CONFIG_IMX_RDC=y
 CONFIG_IMX_BOOTAUX=y
-CONFIG_DEFAULT_DEVICE_TREE="imx7d-phyboard-zeta-001"
+CONFIG_DEFAULT_DEVICE_TREE="imx7d-pcm-061-1110110c"
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/phytec/mx7d_phyboard_zeta/imximage_mt41k128m16jt-125it.cfg,PHYTEC_MT41K128M16JT125IT"
 CONFIG_BOOTDELAY=3
 # CONFIG_CONSOLE_MUX is not set
