--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -381,7 +381,8 @@ dtb-$(CONFIG_MX7) += imx7-colibri.dtb \
 		imx7d-19x19-lpddr3-arm2.dtb \
 		imx7d-phyboard-zeta-001.dtb \
 		imx7s-phyboard-zeta-002.dtb \
-		imx7d-pcm-061-2211111e.dtb
+		imx7d-pcm-061-2211111e.dtb \
+		imx7d-pcm-061-1110110c.dtb
 
 dtb-$(CONFIG_ARCH_MX7ULP) += imx7ulp-evk.dtb \
 		imx7ulp-evk-emmc.dtb \
