--- a/arch/arm/dts/k3-am65xx-phycore-som.dtsi
+++ b/arch/arm/dts/k3-am65xx-phycore-som.dtsi
@@ -4,6 +4,7 @@
  */
 
 #include "k3-am654.dtsi"
+#include <dt-bindings/net/ti-dp83867.h>
 
 / {
 	model = "PHYTEC phyCORE-AM65x";
@@ -46,6 +47,32 @@
 	};
 };
 
+&wkup_pmx0 {
+	mcu_cpsw_pins_default: mcu_cpsw_pins_default {
+		pinctrl-single,pins = <
+			AM65X_WKUP_IOPAD(0x0058, PIN_OUTPUT | MUX_MODE0)	/* (N4) MCU_RGMII1_TX_CTL */
+			AM65X_WKUP_IOPAD(0x005c, PIN_INPUT | MUX_MODE0)		/* (N5) MCU_RGMII1_RX_CTL */
+			AM65X_WKUP_IOPAD(0x0060, PIN_OUTPUT | MUX_MODE0)	/* (M2) MCU_RGMII1_TD3 */
+			AM65X_WKUP_IOPAD(0x0064, PIN_OUTPUT | MUX_MODE0)	/* (M3) MCU_RGMII1_TD2 */
+			AM65X_WKUP_IOPAD(0x0068, PIN_OUTPUT | MUX_MODE0)	/* (M4) MCU_RGMII1_TD1 */
+			AM65X_WKUP_IOPAD(0x006c, PIN_OUTPUT | MUX_MODE0)	/* (M5) MCU_RGMII1_TD0 */
+			AM65X_WKUP_IOPAD(0x0070, PIN_INPUT | MUX_MODE0)		/* (N1) MCU_RGMII1_TXC */
+			AM65X_WKUP_IOPAD(0x0074, PIN_INPUT | MUX_MODE0)		/* (M1) MCU_RGMII1_RXC */
+			AM65X_WKUP_IOPAD(0x0078, PIN_INPUT | MUX_MODE0)		/* (L2) MCU_RGMII1_RD3 */
+			AM65X_WKUP_IOPAD(0x007c, PIN_INPUT | MUX_MODE0)		/* (L5) MCU_RGMII1_RD2 */
+			AM65X_WKUP_IOPAD(0x0080, PIN_INPUT | MUX_MODE0)		/* (M6) MCU_RGMII1_RD1 */
+			AM65X_WKUP_IOPAD(0x0084, PIN_INPUT | MUX_MODE0)		/* (L6) MCU_RGMII1_RD0 */
+		>;
+	};
+
+	mcu_mdio_pins_default: mcu_mdio_pins_default {
+		pinctrl-single,pins = <
+			AM65X_WKUP_IOPAD(0x0088, PIN_INPUT | MUX_MODE0)		/* (L4) MCU_MDIO0_MDIO */
+			AM65X_WKUP_IOPAD(0x008c, PIN_OUTPUT | MUX_MODE0)	/* (L1) MCU_MDIO0_MDC */
+		>;
+	};
+};
+
 &mmc_phy0 {
 	status = "okay";
 	ti,drv-strength-ohm = <50>;
@@ -58,4 +85,24 @@
 	bus-width = <8>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&main_mmc0_pins_default>;
+};
+
+&mcu_cpsw {
+	pinctrl-names = "default";
+	pinctrl-0 = <&mcu_cpsw_pins_default &mcu_mdio_pins_default>;
+};
+
+&davinci_mdio {
+	mcu_eth0_phy: ethernet-phy@1 {
+		reg = <1>;
+		/* TODO: phy reset: TCA9555RTWR(i2c:0x21)[p04].GPIO_MCU_RGMII_RSTN */
+		ti,rx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
+		ti,tx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
+		ti,fifo-depth = <DP83867_PHYCR_FIFO_DEPTH_4_B_NIB>;
+	};
+};
+
+&cpsw_port1 {
+	phy-mode = "rgmii-id";
+	phy-handle = <&mcu_eth0_phy>;
 };
