--- a/arch/arm/dts/k3-am65xx-phycore-som-r5.dtsi
+++ b/arch/arm/dts/k3-am65xx-phycore-som-r5.dtsi
@@ -4,3 +4,53 @@
  */
 
 #include "k3-am6.dtsi"
+
+/ {
+	aliases {
+		remoteproc0 = &sysctrler;
+		remoteproc1 = &a53_0;
+	};
+
+	soc0 {
+		mcu_secproxy: secproxy@28380000 {
+			compatible = "ti,am654-secure-proxy";
+			reg = <0x0 0x2a380000 0x0 0x80000>,
+			      <0x0 0x2a400000 0x0 0x80000>,
+			      <0x0 0x2a480000 0x0 0x80000>;
+			reg-names = "rt", "scfg", "target_data";
+			#mbox-cells = <1>;
+			u-boot,dm-spl;
+		};
+
+		sysctrler: sysctrler {
+			compatible = "ti,am654-system-controller";
+			mboxes= <&mcu_secproxy 4>, <&mcu_secproxy 5>;
+			mbox-names = "tx", "rx";
+			u-boot,dm-spl;
+		};
+
+		a53_0: a53@0 {
+			compatible = "ti,am654-rproc";
+			power-domains = <&k3_pds 202>,
+					<&k3_pds 61>;
+			resets = <&k3_reset 202 0>;
+			proc-controls = <&k3_proc_ctrl 32 10>;
+			assigned-clocks = <&k3_clks 202 0>;
+			assigned-clock-rates = <800000000>;
+			u-boot,dm-spl;
+		};
+	};
+};
+
+&dmsc {
+	mboxes= <&mcu_secproxy 7>, <&mcu_secproxy 6>, <&mcu_secproxy 5>;
+	mbox-names = "tx", "rx", "notify";
+	ti,host-id = <4>;
+	ti,secure-host;
+
+	k3_proc_ctrl: processor-contol {
+		compatible = "ti,sci-proc-control";
+		#proc-cells = <2>;
+		u-boot,dm-spl;
+	};
+};
