--- a/arch/arm/dts/k3-am65xx-phycore-som.dtsi
+++ b/arch/arm/dts/k3-am65xx-phycore-som.dtsi
@@ -7,6 +7,13 @@
 	model = "PHYTEC phyCORE-AM65x";
 	compatible =  "phytec,am65xx-phycore-som", "ti,am654";
 
+	memory@80000000 {
+		device_type = "memory";
+		/* 2G RAM */
+		reg = <0x00000000 0x40000000
+		       0x00000000 0x40000000>;
+	};
+
 	reserved-memory {
 		#address-cells = <2>;
 		#size-cells = <2>;
