AM57SW-672 arm: dts: am57xx-pcm-948-common: enable UART5 pre-relocation
This commit enables UART5 before DDR is configured and U-Boot is
relocated. This commit should not be necessary since the driver used
by UART5 is flagged with DM_FLAG_PRE_RELOC but without it UART5
cannot be used as the default serial console.

Signed-off-by: Matt McKee <mmckee@phytec.com>

--- a/arch/arm/dts/am57xx-pcm-948-common.dtsi
+++ b/arch/arm/dts/am57xx-pcm-948-common.dtsi
@@ -136,7 +136,7 @@
 		>;
 	};
 
-	uart5_pins_sleep: uart5_pins_sleep{
+	uart5_pins_sleep: uart5_pins_sleep {
 		pinctrl-single,pins = <
 			0x1dc (PIN_INPUT | MUX_MODE15)
 			0x1e0 (PIN_INPUT | MUX_MODE15)
@@ -337,6 +337,7 @@
 
 	interrupts-extended = <&crossbar_mpu GIC_SPI 100 IRQ_TYPE_LEVEL_HIGH
 			       &dra7_pmx_core 0x1dc>;
+	u-boot,dm-pre-reloc;
 };
 
 &mac {
