--- a/arch/arm/dts/k3-am65xx-phycore-som.dtsi
+++ b/arch/arm/dts/k3-am65xx-phycore-som.dtsi
@@ -47,6 +47,15 @@
 	};
 };
 
+&main_pmx1 {
+	main_i2c0_pins_default: main_i2c0_pins_default {
+		pinctrl-single,pins = <
+			AM65X_IOPAD(0x0000, PIN_INPUT | MUX_MODE0)      /* (D20) I2C0_SCL */
+			AM65X_IOPAD(0x0004, PIN_INPUT | MUX_MODE0)      /* (C21) I2C0_SDA */
+		>;
+	};
+};
+
 &wkup_pmx0 {
 	mcu_cpsw_pins_default: mcu_cpsw_pins_default {
 		pinctrl-single,pins = <
@@ -70,6 +79,20 @@
 			AM65X_WKUP_IOPAD(0x0088, PIN_INPUT | MUX_MODE0)		/* (L4) MCU_MDIO0_MDIO */
 			AM65X_WKUP_IOPAD(0x008c, PIN_OUTPUT | MUX_MODE0)	/* (L1) MCU_MDIO0_MDC */
 		>;
+	};
+};
+
+&main_i2c0 {
+	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&main_i2c0_pins_default>;
+	clock-frequency = <400000>;
+
+	i2c_eeprom: eeprom@50 {
+		status = "okay";
+		compatible = "at,24c32";
+		reg = <0x50>;
+		pagesize = <32>;
 	};
 };
 
