--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -117,8 +117,7 @@ dtb-$(CONFIG_TARGET_AM572X_PHYCORE_RDK) += am572x-phycore-rdk.dtb \
 	am572x-phycore-rdk-41201111i.dtb \
 	am572x-phycore-rdk-40201111i.dtb \
 	am572x-phycore-rdk-50201111i.dtb \
-	am572x-phycore-rdk-50500111i.dtb \
-	am572x-ksp-5015.dtb
+	am572x-phycore-rdk-50500111i.dtb
 
 dtb-$(CONFIG_TARGET_STV0991) += stv0991.dtb
 
